Fix overflow issue of site due to use of vw

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ p {
 /* Styling header, logo and nav */
 header {
     display: flex;
-    width: 100vw;
+    width: 100%;
     background-color: #bf9b6f;
     margin: 0 auto 0 auto;
     max-height: 170px;
@@ -111,7 +111,7 @@ nav a:hover {
 /* Hero image */
 
 #hero-image {
-        width: 100vw;
+        width: 100%;
         height: 100vh;
         background: url('../image/hero-image.webp') no-repeat center center;
         position: reletive;
@@ -153,6 +153,8 @@ nav a:hover {
     #cover-text {
     color: #d9c27e;
     width: 50%;
+    
+    }
     
     #cover-text h1 {
         line-height: 3em;
